Name:                json-query
Version:             0.1
Synopsis:            Query interface to JSON objects
License:             BSD3
License-file:        LICENSE
Author:              John Van Enk
Maintainer:          vanenkj@gmail.com
Copyright:           John Van Enk, 2010
Stability:           Experimental
Category:            Text
Build-type:          Simple

Extra-source-files:  
Cabal-version:       >=1.2


Library
  Exposed-modules:   Text.JSONQ
  Build-depends:     base >= 4 && < 5,
                     AttoJson >= 0.5.8 && < 0.6,
                     parsec >= 3.1.0 && < 3.2,
                     bytestring >= 0.9.1.5 && < 0.9.2,
                     containers >= 0.3.0.0 && < 0.3.1,
                     regex-posix >= 0.94.1 && < 0.95
  Ghc-options:       -Wall
